# Sombra

./: .gitignore  README.md  go.work.sum
data/: operators.json
data/keys/: rsa  rsa.pub
demon/: CMakeLists.txt  Main.cc
demon/core/: Delay.cc  Demon.cc  Initialize.cc  Lib.cc  Print.cc
demon/entry/: Exe.cc
demon/include/: Common.h  Demon.h  Win32.h
teamserver/: go.mod  go.sum  main.go  makefile
teamserver/cmd/: cmd.go  operators.go  server.go
teamserver/cmd/crypto/: aes.go  rsa.go  utils.go
teamserver/cmd/listeners/: http.go
teamserver/cmd/storage/: keys.go
teamserver/cmd/transport/: envelope.go
teamserver/pkg/logger/: logger.go
teamserver/sombraData/keys/: rsa  rsa.pub
tests/: main.py  test.py
